--- a/client/src/Components/Users/Navbar.js/Navbar.css
+++ b/client/src/Components/Users/Navbar.js/Navbar.css
@@ -9,6 +9,7 @@
      position: fixed;
      top: 0;
      z-index: 999;
+
      
 }
 
@@ -99,4 +100,28 @@
     height: 100px;
     border-radius: 50%;
     object-fit: cover;
+}
+
+
+.notifications{
+  position: absolute;
+  top: 50px;
+  right: 0;
+  background-color: white;
+  color: black;
+  font-weight: 300;
+  display: flex;
+  flex-direction: column;
+}
+
+.notification{
+  padding: 5px;
+  font-size: 14px;
+
+}
+.nButton{
+  width: 40%;
+  font-size: 10px;
+  border: gainsboro;
+  justify-content: center;
 }
